--- a/README.org
+++ b/README.org
@@ -10,6 +10,9 @@
   - [[https://hunspell.github.io/][Hunspell]]
   - [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
   - [[https://www.x.org/][xprop]]
+- JavaScript:
+  - [[https://nodejs.org/][Node.js]]
+  - [[https://github.com/sourcegraph/javascript-typescript-langserver][javascript-typescript-langserver]]
 - Org:
   - [[https://www.latex-project.org/][LaTeX]]
 - Scheme:
@@ -20,6 +23,10 @@ On Arch Linux, run:
 #+BEGIN_SRC sh
   # General
   pacman -S git hunspell hunspell-en adobe-source-code-pro-fonts xorg-xprop
+
+  # JavaScript
+  pacman -S nodejs npm python2
+  npm i -g javascript-typescript-langserver
 
   # Org
   pacman -S texlive-core texlive-latexextra
