[emacs] Make input a candidate.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -543,6 +543,7 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
     (setq ivy-use-virtual-buffers t)
     (setq ivy-virtual-abbreviate 'full)
     (setq ivy-initial-inputs-alist nil)
+    (setq ivy-use-selectable-prompt t)
     (setq ivy-count-format "%d/%d ")
     (ivy-mode)
     :delight)
