--- a/README.org
+++ b/README.org
@@ -9,6 +9,7 @@
   - [[https://git-scm.com/][Git]]
   - [[https://hunspell.github.io/][Hunspell]]
   - [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
+  - [[https://geoff.greer.fm/ag/][The Silver Searcher]]
   - [[https://www.x.org/][xprop]]
 - JavaScript:
   - [[https://github.com/sourcegraph/javascript-typescript-langserver][javascript-typescript-langserver]]
@@ -23,7 +24,8 @@ On Arch Linux, run:
 
 #+BEGIN_SRC sh
   # General
-  pacman -S git hunspell hunspell-en adobe-source-code-pro-fonts xorg-xprop
+  pacman -S git hunspell hunspell-en adobe-source-code-pro-fonts
+  pacman -S the_silver_searcher xorg-xprop
 
   # JavaScript
   pacman -S nodejs npm python2
