--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -997,12 +997,16 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
                      spec))))
 #+END_SRC
 
-Set default font to [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]].
+Set default font. Try [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]], then [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]].
 
 #+BEGIN_SRC emacs-lisp
-  (let ((family "Source Code Pro"))
-    (when (x-list-fonts (format "*-%s-*" family))
-      (set-face-attribute 'default nil :family family)))
+  (when-let
+      (spec
+       (seq-find (lambda (spec)
+                   (x-list-fonts (format "*-%s-*" (plist-get spec :family))))
+                 '((:family "PragmataPro Mono" :size 15)
+                   (:family "Source Code Pro"  :size 15))))
+    (set-frame-font (apply #'font-spec spec) nil t))
 #+END_SRC
 
 Disable blink cursor mode, instead, enable highlight line mode.
