--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@
 - General:
   - [[https://git-scm.com/][Git]]
   - [[https://hunspell.github.io/][Hunspell]]
-  - [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
+  - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
   - [[https://geoff.greer.fm/ag/][The Silver Searcher]]
   - [[https://www.x.org/][xprop]]
 - JavaScript:
